# samples

./: CMakeLists.txt  CMakeLists.txt.in
0_Point_Operators/Color_Conversion/src/: main.cpp
0_Point_Operators/Scaling/: CMakeLists.txt
0_Point_Operators/Windowing/: CMakeLists.txt
0_Point_Operators/Windowing/src/: main.cpp
1_Local_Operators/Box_Blur/: CMakeLists.txt
1_Local_Operators/Box_Blur/src/: main.cpp
1_Local_Operators/Box_Blur_RGBA/: CMakeLists.txt
1_Local_Operators/Box_Blur_RGBA/src/: main.cpp
1_Local_Operators/Dilate/: CMakeLists.txt
1_Local_Operators/Dilate/src/: main.cpp
1_Local_Operators/Dilate_RGBA/: CMakeLists.txt
1_Local_Operators/Dilate_RGBA/src/: main.cpp
1_Local_Operators/Erode/src/: main.cpp
1_Local_Operators/Erode_RGBA/: CMakeLists.txt
1_Local_Operators/Gaussian_Blur_RGBA/: CMakeLists.txt
1_Local_Operators/Laplace/: CMakeLists.txt
1_Local_Operators/Laplace_RGBA/: CMakeLists.txt
1_Local_Operators/Unsharp/: CMakeLists.txt
2_Global_Operators/Histogram/: CMakeLists.txt
2_Global_Operators/Reduction_Max/: CMakeLists.txt
2_Global_Operators/Reduction_Sum/: CMakeLists.txt
3_Preprocessing/: CMakeLists.txt
4_Postprocessing/Bokeh_Effect/: CMakeLists.txt
4_Postprocessing/Night_Filter/: CMakeLists.txt
5_Other/Gaussian_Laplacian_Pyramid/: CMakeLists.txt
5_Other/Motion_Interpolation/: CMakeLists.txt
buildtools/nmake/: sample.mak
buildtools/unix/: Makefile.in
buildtools/vs2015/: sample.vcxproj  sample.vcxproj.filters
common/: hipacc_helper.hpp
common/config/: cpu.conf  opencl-cpu.conf
(+25 files in other folders)
